# modern-cpp-feature

./: CMakeLists.txt  README.md  main.cpp
src/: check_cpp_version.h  variadic_templates.h
src/algorithms/: graph.h  heap.h  test_graph.h
src/memory/: memory_primitives.cpp  placement_new.cpp
src/output_range/: output_range.h
src/smart_ptr/: smart_ptr.cpp  smart_ptr.h
src/template/: factorial.h  meta_programming.h  output_container.h  tag_dispatch.h
src/template/cpp_templates_2ed/: stack_impl.h  test_stack_impl.h
src/test/: test_coroutine.cpp  test_error_code.cpp  test_smart_ptr.cpp  test_variadic_template.h  test_vector.h
src/test_arc/: arc_job.h  itemwise_job.h  job_base.h  job_rill.h  rill_task.h  rill_trigger.h  test_arc.h
src/utils/: print.h  string_util.cpp  string_util.h
